[workspace]
resolver = "2"
members = [
	"part_1_ray_trace_a_sphere",
	"part_2_ray_trace_some_spheres",
	"part_3_ray_trace_shadows",
    "part_4_ray_trace_reflections",
    "part_5_ray_trace_multithread_scanlines",
    "part_6_ray_trace_window",
	"part_7_ray_trace_primitives",
	"rng_example",
]

[workspace.dependencies]
minifb = "0.25.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
stb_image_write_rust = "1.16.1"
num_cpus = "1.16.0"