[package]
name = "part_7_ray_trace_primitives"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = { workspace = true }
stb_image_write_rust = { workspace = true }
num_cpus = { workspace = true }